style.css
:root {
    --topbar-color: #A8DFA4;
    --button-color-base: #FBADFF;
    --button-color-hover: #FA99FF;
    --button-color-active: #86CE80;
    --background-color-1: #FEDBFF;
    --background-color-2: #c1e8be;
    --bottombar-color: #f989ff;

    --navbar-name-color: black;
    --navbar-button-text-color: black;
    --navbar-button-text-color-hover: black;
    --navbar-button-text-color-active: black;
    --link-color: blue;
    --paragraph-text-color-1: black;
    --paragraph-text-color-2: black;
    --bottombar-text-color: black;
    --bottombar-email-link-color: blue;
}

.topbar{
    display: flex;
    width: 100%;
    justify-content: space-between;
    align-items: center;
    background-color: var(--topbar-color);
    position: fixed;
    top: 0;
    z-index: 999;
}

.navbar{
    display: flex;
    overflow: hidden;
    float: center;
    width: fit-content;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-right: 10px;
    margin-top: 1vw;
    margin-bottom: 1vw;
    margin-right: 1vw;
    align-items: center;
    justify-content: space-between;
}

.navbar a{
    float: center;
    text-align: center;
    padding: 5px 7px;
    padding: 0.5vw 0.7vw;
    margin: 0px 7px;
    margin: 0vw 0.4vw;
    font-size: clamp(1rem,1.85vw,1.6rem);
    color: var(--navbar-button-text-color);
    text-decoration: none;
    background-color: var(--button-color-base);
}

.navbar a:hover{
    background-color: var(--button-color-hover);
    color: var(--navbar-button-text-color-hover);
}

.navbar a.active{
    background-color: var(--button-color-active);
    color: var(--navbar-button-text-color-active);
}

.bottombar{
    width: 100%;
    height: 60px;
    height: 6vw;
    max-height: 100px;
    background-color: var(--bottombar-color);
    padding-top: 10px;
    padding-bottom: 10px;
    padding-top: 1.5vw;
    padding-bottom: 1vw;
    line-height: 0.45;
    bottom: 0;
}

.link_container{
    display: flex;
    justify-content: space-around;
    align-items: center;
    margin: auto;
    width: max(60%,400px);
    height: 100%;
}

.link_container a{
    height: 100%;
}

.link_container img{
    height: 100%;
    padding: 0;
}

.bottombar_text{
    margin: 0;
    font-size: clamp(1rem,2vw,2rem);
    color: var(--bottombar-text-color);
}

.bottombar_email_link{
    text-align: center;
    margin-top: 0.75vw;
    margin-bottom: 0%;
    font-size: clamp(1rem,1.7vw,2rem);
    color: var(--bottombar-email-link-color);
}

.pagesection{
    float: center;
    width: 100%;
    padding-top: 15px;
    padding-bottom: 35px;
    padding-top: 1.5vw;
    padding-bottom: 3.5vw;
}

.use_bg2{
    background-color: var(--background-color-2);
}

.use_bg2 p{
    color: var(--paragraph-text-color-2);
}

.centered_container{
    display: flex;
    justify-content: center;
    width: 100%;
}

.pagesection .centered_container a{
    font-size: 1rem;
    text-decoration: none;
    padding-top:1%;
}

.pagesection p{
    text-indent: 3rem;
    text-align: justify;
    text-justify: inter-word;
    margin-top: 5px;
    margin-top: 0.5vw;
    margin-left: 70px; 
    margin-right: 70px;
    margin-left: 7vw;
    margin-right: 7vw;
}

.pagesection .pics{
    display: flex;
    justify-content: space-around;
    align-items: center;
    float: center;
    margin-left: 30px; 
    margin-right: 30px;
    margin-left: 3vw;
    margin-right: 3vw;
}

.pics img{
    display: block;
    padding: 0;
    margin: auto;
}

.vid_container{
    margin-bottom: 20px;
    margin-bottom: 2vw;
}

.vid_container iframe{
    width: 50%;
    aspect-ratio: 16/9;
    height: auto;
    top: 0;
    left: 0;
}

.audio_container{
    display: flex;
    justify-content: center;
    width: 80%;
    height: fit-content;
    margin: auto;
    margin-top: 15px;
    margin-top: 1.5vw;
}

audio{
    padding-left: 2.5%;
    padding-right: 2.5%;
    width: 100%;
}

h1{
    text-align: center;
    font-size: clamp(1.5rem,2.1vw,2rem);
    text-decoration: none;
    color: var(--navbar-name-color);
}

h2{
    text-align: center;
    font-size: clamp(1.4rem,2vw,1.9rem);
    text-decoration: none;
}

h3{
    text-align: center;
    font-size: clamp(1.25rem,1.75vw,1.75rem);
    text-decoration: none;
}

p{
    text-align: left;
    font-size: clamp(1rem,1.85vw,1.6rem);
    text-decoration: none;
    line-height: 1.5;
    color: var(--paragraph-text-color-1);
}

a{
    font-size: 15px;
    font-size: clamp(1rem,1.85vw,1.6rem);
    color: var(--link-color);
}

body{
    height: 100vh;
    width: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: var(--background-color-1);
    margin: 0;
    padding: 0;
}

.main{
    margin: 0;
    padding: 0;
    margin-top: 6%;
    margin-top: max(5%, calc(11vh - 5vw));
    flex-grow: 1;
}

